# add_test(TEST00 ./00_simple_inject.sh)

set(VACCINE_LINKED_UNITTEST_TARGET_NAME "01_linked_unit")
add_executable(${VACCINE_LINKED_UNITTEST_TARGET_NAME}
  01_linked_units.cpp
  unit_utils.cpp
  )

set_target_properties(${VACCINE_LINKED_UNITTEST_TARGET_NAME} PROPERTIES
  CXX_STANDARD 11
  CXX_STANDARD_REQUIRED ON
  )

target_include_directories(${VACCINE_LINKED_UNITTEST_TARGET_NAME} PRIVATE "vaccine")
target_link_libraries(${VACCINE_LINKED_UNITTEST_TARGET_NAME} qnject)


add_test( NAME 01_LINKED_UNIT  
  COMMAND "${VACCINE_LINKED_UNITTEST_TARGET_NAME}" 
  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
